--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -18,13 +18,12 @@
     <section class="summary">
       <h1>&#8220;</h1>
 
-      <p>After a decade of leading design and technology efforts for teams at
-      Etsy, GOOD, Blurb, and beyond, one blaring fact demanded attention.
-      Nothing got done better or faster (or with the same dollop of fun) as the
-      times when these two worked side by side. In April of 2011, Bek and Zak
-      carried their discovery into the woods to build Cabin. Today, they
-      partner with other like-minded folks who value design and technology as
-      indispensable tools for sharing, uniting, and making a difference.</p>
+      <p>Cabin is a multi-disciplinary design and development studio dedicated
+      to holistic branding, experience design, and web development. With over a
+      decade of experience crafting and scaling systems for small and large
+      businesses alike, Cabin proudly partners with others who value design and
+      technology as indispensable tools for sharing, uniting, and making a
+      difference.</p>
 
       <a class="email button-arrow button-hl" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
     </section>
@@ -39,11 +38,11 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Hodgson is a designer and strategist who has worked to define
-        and extend social good brands for over a decade. With experience
-        spanning traditional print, digital design, marketing, and strategy,
-        Bek has spent her career building tools and environments for
-        communities to thrive.</p>
+        <p>Bek Hodgson is a designer and strategist with experience spanning
+        business strategy, branding, digital design, and traditional print. Her
+        knack for transforming complexity has been instrumental in creating
+        truly comprehensive and refined systems. Prior to founding Cabin, Bek
+        led product design at GOOD, Etsy, Blurb, and beyond.</p>
 
         <p>Originally from Santa Barbara, California&mdash;and a bona fide
         gypsy at heart&mdash;Bek calls Zak home. Where her caravan goes only
@@ -63,11 +62,11 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Zak Johnson has architected and developed software for over a
-        decade. His passion for crafting experiences that are fun, easy to use,
-        and reliable has defined his work. Zak's intimate familiarity with the
-        entire web stack&mdash;from infrastructure through database, back end,
-        and front end&mdash;enables him to build full-scale web
+        <p>Zak Johnson has architected and built software since the late 90s.
+        His passion for crafting experiences that are fun, easy to use, and
+        reliable has defined his work. Zak's intimate familiarity with the
+        entire web stack&mdash;from infrastructure through the database, back
+        end, and front end&mdash;enables him to build full-scale web
         applications.</p>
 
         <p>Born in Brisbane, Australia and raised in the Pacific Northwest, Zak
@@ -122,13 +121,27 @@
     <section class="colophon">
       <h1>Colophon</h1>
 
-      <p>madebycabin.com was designed by Bek Hodgson and built by Zak Johnson.
-      Cabin features the fonts YWFT Ultramagnetic by Michael Cina, and Proxima
-      Nova by Mark Simonson.</p>
+      <p>Designed by Bek Hodgson and built by Zak Johnson in Portland, Oregon.
+      Featuring the fonts
+      <a href="http://www.youworkforthem.com/font/T0020/ywft-ultramagnetic" target="_blank">YWFT Ultramagnetic</a>
+      by <a href="http://michaelcinaassociates.com/" target="_blank">Michael Cina</a>
+      and <a href="http://www.myfonts.com/fonts/marksimonson/proxima-nova/" target="_blank">Proxima Nova</a>
+      by <a href="http://www.marksimonson.com/" target="_blank">Mark Simonson</a>.
+      Made with <a href="http://www.python.org/" target="_blank">Python</a>,
+      <a href="http://flask.pocoo.org/" target="_blank">Flask</a>,
+      <a href="http://redis.io/" target="_blank">Redis</a>,
+      <a href="http://coffeescript.org/" target="_blank">CoffeeScript</a>,
+      and <a href="http://learnboost.github.com/stylus/" target="_blank">Stylus</a>.
+      Hosted on <a href="http://aws.amazon.com/" target="_blank">AWS</a>.</p>
 
-      <p>Responsive design blah blah best suited for the viewing
-      device&mdash;mobile to überscreen. Built on the nest of a million deadly
-      pythons using a dab of this and a pinch of that.</p>
+      <p>We couldn’t have done it without
+      <a href="http://www.armsandsleepers.com/" target="_blank">Arms and Sleepers</a>,
+      <a href="http://www.laphroaig.com/" target="_blank">Laphroiag</a>,
+      espresso from <a href="http://www.yelp.com/biz/albina-press-portland" target="_blank">Albina Press</a>,
+      <a href="http://thebigegg.com/" target="_blank">The Big Egg</a>,
+      <a href="http://www.tastenirvana.com/" target="_blank">coconut water</a>,
+      <a href="http://hotyogaforlife.com/" target="_blank">hot yoga</a>,
+      and two notable felines.</p>
 
       <div class="signature">xo</div>
     </section>
