--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -5,6 +5,7 @@
 {% set page_description = project.brief %}
 
 {% block content %}
+<div class="projects">
   <div class="project">
     <div class="info">
       <hgroup>
@@ -126,4 +127,5 @@
     {% endwith %}
     </div>
   </div>
+</div>
 {% endblock %}
