Reposition project .prev-next; refs #71
Now the whole project has a top-margin and is position: relative, the
prev-next itself doesn't need to account for the extra spacing.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -845,7 +845,7 @@ images_animate_distance = 1200px
     .content
       position: relative
     .prev-next
-      absolute: top 30px right
+      absolute: top right
 
     .dev-shortlist h3
       font-size: 13px
