Improve shortlist transition; refs #71

--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -73,7 +73,7 @@
 
     <div class="project-content">
     {% if project.dev_shortlist %}
-      <div class="dev-shortlist">
+      <div class="dev-shortlist closed">
         <h3>Development Shortlist</h3>
         <a class="dev-shortlist-toggle"><span>Toggle</span></a>
         <div class="dev-shortlist-window">
