Increase size of connect social icons on mobile

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -41,8 +41,11 @@ social-icon(network, retina = false)
   &:before
     icon-base(26px)
     absolute: left top
-    border-radius: 26px
     content: ""
+.connect li:before
+  width: 30px
+  height: 30px
+  border-radius: 30px
 
 icon(arrow-mini)
 icon(browser-shadow)
