--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -340,6 +340,7 @@ images_animate_distance = 1200px
       background-color: cabin_hl_light
   .images .placeholder
     visibility: hidden
+    margin-bottom: 60px
     position: relative
     &.sized
       visibility: visible
@@ -350,7 +351,6 @@ images_animate_distance = 1200px
     img
       clear: both
       width: 100%
-      margin-bottom: 60px
       -webkit-transform: translateZ(0)  // fixes rendering on Mobile Safari
       vertical-align: top
       &.shadow
@@ -566,6 +566,9 @@ images_animate_distance = 1200px
   .page-project
     .tabs
       margin-top: 10px
+
+    .images .placeholder
+      margin-bottom: 40px
 
     .prev-next, .bottom .social
       display: none
