About-page text changes

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -19,10 +19,10 @@
       <h1>&#8220;</h1>
 
       <p>Cabin is a multi-disciplinary design and development studio dedicated
-      to holistic branding, experience design, and web development. With over a
-      decade of experience crafting and scaling systems for small and large
-      businesses alike, Cabin proudly partners with others who value design and
-      technology as indispensable tools for sharing, uniting, and making a
+      to holistic branding, experience design, and web development. With more
+      than a decade spent crafting and scaling systems for small and large
+      businesses alike, Cabin now works with select partners who value design
+      and technology as indispensable tools for sharing, uniting, and making a
       difference.</p>
 
       <a class="email button-arrow button-hl" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
@@ -38,11 +38,11 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Hodgson is a designer and strategist with experience spanning
-        business strategy, branding, digital design, and traditional print. Her
-        knack for transforming complexity has been instrumental in creating
-        truly comprehensive and refined systems. Prior to founding Cabin, Bek
-        led product design at GOOD, Etsy, Blurb, and beyond.</p>
+        <p>Bek Hodgson is a designer and strategist with years of experience
+        leading product design at GOOD, Etsy, Blurb, and beyond. With a keen
+        mind for transforming complexity into delight, and the vision, heart,
+        and business acumen to drive decisions, Bek's work aims to create
+        refined and extendable systems.</p>
 
         <p>Originally from Santa Barbara, California&mdash;and a bona fide
         gypsy at heart&mdash;Bek calls Zak home. Where her caravan goes only
