Add border-radius to cohorts twitter icon

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -821,6 +821,7 @@ images_animate_distance = 1200px
         display: block
       .twitter
         background-color: cabin_grey_med
+        border-radius: 16px
         margin-right: 5px
         relative: top 2px left
       a:hover .twitter
