Don't show logo hover state on touch devices

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -507,7 +507,7 @@ images_animate_distance = 1200px
         left: 50%; top: 12px
         margin-left: -9px
         size: 18px 16px
-      .svg &:hover:before
+      .no-touch .svg &:hover:before
         background-position: -18px 0
       display: table-cell
       text-indent: -999px
