About text changes; fixes #96

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -18,7 +18,7 @@
     <section class="summary">
       <h1>&#8220;</h1>
 
-      <p>Cabin is a multi-disciplinary design and development studio dedicated
+      <p>Cabin is a multi-disciplinary design and technology studio dedicated
       to holistic branding, experience design, and web development. With more
       than a decade spent crafting and scaling systems for small and large
       businesses alike, Cabin now works with select partners who value design
@@ -39,10 +39,11 @@
         </hgroup>
 
         <p>Bek Hodgson is a designer and strategist with years of experience
-        leading product design at GOOD, Etsy, Blurb, and beyond. With a keen
-        mind for transforming complexity into delight, and the vision, heart,
-        and business acumen to drive decisions, Bek's work aims to create
-        refined and extendable systems.</p>
+        leading product design at companies such as GOOD, Etsy, Blurb, and
+        beyond. With a keen mind for transforming complexity into delight, and
+        the vision, heart, and business acumen to drive decisions, Bek works
+        from concept to completion to create refined and extendable
+        systems.</p>
 
         <p>Originally from Santa Barbara, California&mdash;and a bona fide
         gypsy at heart&mdash;Bek calls Zak home. Where her caravan goes only
