--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -43,7 +43,7 @@
   <div class="main{% if page %} page-{{ page }}{% endif %}">
     <div class="nav-container">
       <nav>
-        <a href="{{ url_for('main.index') }}" class="logo">Cabin</a>
+        <a href="{{ url_for('main.index') }}" class="logo"><span>Cabin</span></a>
         <div class="links">
           <a href="{{ url_for('main.work') }}">Work</a>
           <a href="{{ url_for('main.about') }}">About</a>
