Allow for cohorts without Twitter accounts
I'm looking at you, Ben Callaway. ಠ_ಠ

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -507,17 +507,19 @@ images_animate_distance = 1200px
 
     .cohorts
       td
+        padding: 2px 0
         vertical-align: bottom
       td:first-child
+        padding-left: 20px
         padding-right: 50px
       a
         color: cabin_black
         display: block
+        position: relative
       .twitter
+        absolute: top left -21px
         background-color: cabin_grey_med
         border-radius: 16px
-        margin-right: 5px
-        relative: top 2px left
       a:hover .twitter
         background-color: cabin_black
 
