Migrate from cohort.twitter_user to .url; refs #101

--- a/cabin/templates/admin/project.html
+++ b/cabin/templates/admin/project.html
@@ -69,7 +69,7 @@
         <fieldset class="cohort" data-prefix="{{ cohort.name }}">
           {{ render(cohort.form.name) }}
           {{ render(cohort.form.role) }}
-          {{ render(cohort.form.twitter_user) }}
+          {{ render(cohort.form.url) }}
           <a class="icon trash">Delete</a>
         </fieldset>
       {% endfor %}
