--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -516,11 +516,11 @@ images_animate_distance = 1200px
         color: cabin_black
         display: block
         position: relative
-      .twitter
+      .icon
         absolute: top left -21px
         background-color: cabin_grey_med
         border-radius: 16px
-      a:hover .twitter
+      a:hover .icon
         background-color: cabin_black
 
     .info
