--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -106,6 +106,11 @@ button, .button
     visibility: hidden
 
 
+@keyframes keyboard-hints
+  to
+    background-color: cabin_grey_light
+
+
 // Work page  {{{2
 
 .bricks
@@ -548,6 +553,56 @@ images_animate_distance = 1200px
       absolute: top right
       border-left: 1px solid cabin_grey_light
       padding-left: 20px
+      .keyboard-hints
+        margin-top: 50px
+        opacity: 0
+        transition: opacity 250ms ease-in
+        .kb-pic
+          margin: 0 auto
+          width: 51px
+        p
+          clear: both
+          color: cabin_grey_med
+          font-size: 9px
+          letter-spacing: 1px
+          padding-top: 10px
+          text-align: center
+          text-transform: uppercase
+        span
+          background-position: center center
+          background-repeat: no-repeat
+          border: 1px solid cabin_grey_light
+          border-radius: 2px
+          float: left
+          margin: 1px
+          size: 13px
+        .kb-up
+          background-image: url(keyboard/arrow-up.png)
+          margin-left: 15px + 2 + 1
+        .kb-left
+          background-image: url(keyboard/arrow-left.png)
+          clear: left
+        .kb-down
+          background-image: url(keyboard/arrow-down.png)
+        .kb-right
+          background-image: url(keyboard/arrow-right.png)
+      .keyboard-hints.shown
+        duration = 400ms
+        opacity: 1
+        transition: none
+        // TODO: coordinating animation across elements doesn't always work
+        span
+          animation-duration: duration
+          animation-name: keyboard-hints
+          animation-timing-function: step-start
+        .kb-up
+          animation-delay: duration
+        .kb-left
+          animation-delay: duration * 3
+        .kb-down
+          animation-delay: duration * 2
+        .kb-right
+          animation-delay: duration * 4
 
     .dev-shortlist h3
       font-size: 13px
@@ -966,6 +1021,11 @@ images_animate_distance = 1200px
     display: none
   .page-project .images img.shadow
     border-radius: 2px 2px 0 0
+
+// Don't show keyboard hints when we lack room.
+@media only screen and (max-width: 820px)
+  .page-project .keyboard-hints
+    display: none
 
 
 // Let the secondary error message take up the screen width when it fits.
