Update and embiggen about page summary

--- a/cabin/style/pages/about.styl
+++ b/cabin/style/pages/about.styl
@@ -272,6 +272,9 @@
       > h1
         font-family: Georgia, serif
         font-size: 20px
+      p
+        font-size: 24px
+        margin-top: -6px  // align with h1
       .email
         text-transform: none
 
