--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -18,12 +18,9 @@
     <section class="summary">
       <h1>&#8220;</h1>
 
-      <p>Cabin is a multi-disciplinary design and technology studio dedicated
-      to holistic branding, experience design, and web development. With more
-      than a decade spent crafting and scaling systems for small and large
-      businesses alike, Cabin now works with select partners who value design
-      and technology as indispensable tools for sharing, uniting, and making a
-      difference.</p>
+      <p>Cabin is an interdisciplinary creative agency blending modern
+      technology, design, and heart. We partner with innovators, hustlers, and
+      lovers to create all flavors of magic. Ready to rumble?</p>
 
       <a class="email button-arrow button-hl" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
     </section>
