Update bio text

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -35,16 +35,12 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Hodgson is a designer and strategist with years of experience
-        leading product design at companies such as GOOD, Etsy, Blurb, and
-        beyond. With a keen mind for transforming complexity into delight, and
-        the vision, heart, and business acumen to drive decisions, Bek works
-        from concept to completion to create refined and extendable
-        systems.</p>
-
-        <p>Originally from Santa Barbara, California&mdash;and a bona fide
-        gypsy at heart&mdash;Bek calls Zak home. Where her caravan goes only
-        one man knows.</p>
+        <p>Bek Hodgson is a designer and strategist whose passion for people and
+        socially-valuable pursuits has permeated her career for over a decade.
+        Prior to founding Cabin, Bek led product design at GOOD, Etsy, Blurb,
+        and beyond. With a keen mind for transforming complexity into delight
+        and the vision, heart, and business acumen to drive decisions, Bek has
+        won the trust and respect of clients and collaborators alike.</p>
 
         <div class="social">
           <a href="https://twitter.com/uberbek" class="twitter" target="_blank">@uberbek</a>
@@ -66,9 +62,6 @@
         entire web stack&mdash;from infrastructure through the database, back
         end, and front end&mdash;enables him to build full-scale web
         applications.</p>
-
-        <p>Born in Brisbane, Australia and raised in the Pacific Northwest, Zak
-        now calls Portland, Oregon home.</p>
 
         <div class="social">
           <a href="https://twitter.com/zakj" class="twitter" target="_blank">@zakj</a>
