Update Bek's bio

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -35,12 +35,13 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Hodgson is a designer and strategist whose passion for people and
-        socially-valuable pursuits has permeated her career for over a decade.
-        Prior to founding Cabin, Bek led product design at GOOD, Etsy, Blurb,
-        and beyond. With a keen mind for transforming complexity into delight
-        and the vision, heart, and business acumen to drive decisions, Bek has
-        won the trust and respect of clients and collaborators alike.</p>
+        <p>Bek Hodgson is a creative director, designer, and strategist whose
+        passion for people and socially-valuable pursuits has permeated her
+        career for more than a decade. Prior to founding Cabin, Bek led product
+        design at GOOD, Etsy, Blurb, and beyond. With a keen mind for
+        transforming complexity into delight and the vision, heart, and
+        business acumen to drive decisions, Bek has won the respect of clients
+        and collaborators alike.</p>
 
         <div class="social">
           <a href="https://twitter.com/uberbek" class="twitter" target="_blank">@uberbek</a>
