Add new icons for Apple devices

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -8,6 +8,11 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='cabin-symbol-76.png') }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='cabin-symbol-120.png') }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ url_for('static', filename='cabin-symbol-152.png') }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='cabin-symbol-180.png') }}">
+
   <meta name="twitter:site" content="@madebycabin">
   <meta property="og:site_name" content="Cabin">
   <meta property="og:type" content="website">
