--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -30,12 +30,12 @@
 
       <div class="bio bek">
         <hgroup>
-          <h2>Bek Hodgson</h2>
+          <h2>Bek Stone</h2>
           <h3>Creative Director</h3>
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Hodgson is a creative director, designer, and strategist whose
+        <p>Bek Stone is a creative director, designer, and strategist whose
         passion for people and socially-valuable pursuits has permeated her
         career for more than a decade. Prior to founding Cabin, Bek led product
         design at GOOD, Etsy, Blurb, and beyond. With a keen mind for
@@ -113,7 +113,7 @@
     <section class="colophon">
       <h1>Colophon</h1>
 
-      <p>Designed by Bek Hodgson and built by Zak Johnson in Portland, Oregon.
+      <p>Designed by Bek Stone and built by Zak Johnson in Portland, Oregon.
       Featuring the fonts
       <a href="http://www.youworkforthem.com/font/T0020/ywft-ultramagnetic" target="_blank">YWFT Ultramagnetic</a>
       by <a href="http://michaelcinaassociates.com/" target="_blank">Michael Cina</a>
