--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -82,7 +82,7 @@
           <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
           <li>+1 415 255 5473</li>
           <li class="address"><a href="http://maps.apple.com/?q=87+E+Green+St,+91105" target="_blank">
-            87 E Green St #304 &middot; Pasadena, CA 91105</a></li>
+            58b Woodward St &middot; San Francisco, CA 94103</a></li>
         </ol>
       </footer>
     </div>
