--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -35,7 +35,7 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Stone is a creative director, designer, and strategist whose
+        <p>Bek Stone (<i>née</i> Hodgson) is a creative director, designer, and strategist whose
         passion for people and socially-valuable pursuits has permeated her
         career for more than a decade. Prior to founding Cabin, Bek led product
         design at GOOD, Etsy, Blurb, and beyond. With a keen mind for
