Update about blurb

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -19,8 +19,11 @@
       <h1>&#8220;</h1>
 
       <p>Cabin is an interdisciplinary creative agency blending modern
-      technology, design, and heart. We partner with innovators, hustlers, and
-      lovers to create all flavors of magic. Ready to rumble?</p>
+      technology, design, and heart.</p>
+
+      <p>As of 2015, we are no longer taking on new projects as we have joined
+      forces with Airbnb and Mixpanel&mdash;but please don't hesitate to send
+      love letters!</p>
 
       <a class="email button-arrow button-hl" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
     </section>
