--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="initial-scale=1.0">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#ab7050">
 
   <link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static', filename='cabin-symbol-76.png') }}">
   <link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='cabin-symbol-120.png') }}">
