Update social media links

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -47,9 +47,9 @@
         and collaborators alike.</p>
 
         <div class="social">
-          <a href="https://twitter.com/uberbek" class="twitter" target="_blank">@uberbek</a>
-          <a href="http://instagram.com/uberbek" class="instagram" target="_blank">Instagram</a>
-          <a href="http://pinterest.com/uberbek/" class="pinterest" target="_blank">Pinterest</a>
+          <a href="https://twitter.com/saintbek" class="twitter" target="_blank">@saintbek</a>
+          <a href="https://www.instagram.com/saintbek/" class="instagram" target="_blank">Instagram</a>
+          <a href="https://www.pinterest.com/saintbek/" class="pinterest" target="_blank">Pinterest</a>
         </div>
       </div>
 
@@ -69,7 +69,7 @@
 
         <div class="social">
           <a href="https://twitter.com/zakj" class="twitter" target="_blank">@zakj</a>
-          <a href="http://instagram.com/zakj" class="instagram" target="_blank">Instagram</a>
+          <a href="https://www.instagram.com/zakj/" class="instagram" target="_blank">Instagram</a>
           <a href="https://github.com/zakj" class="github" target="_blank">GitHub</a>
         </div>
       </div>
