Update mailing address

--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -81,8 +81,8 @@
         {% endif %}
         <ol>
           <li><a href="mailto:xo@madebycabin.com">xo@madebycabin.com</a></li>
-          <li class="address"><a href="http://maps.apple.com/?q=58b+Woodward+St,+94013" target="_blank">
-            58b Woodward St &middot; San Francisco, CA 94103</a></li>
+          <li class="address"><a href="http://maps.apple.com/?q=688+42nd+St,+94609" target="_blank">
+            688 42nd St &middot; Oakland, CA 94609</a></li>
         </ol>
       </footer>
     </div>
