--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -19,13 +19,8 @@
       <h1>&#8220;</h1>
 
       <p>Cabin is an interdisciplinary creative agency blending modern
-      technology, design, and heart.</p>
-
-      <p>As of 2015, we are no longer taking on new projects as we have joined
-      forces with Airbnb and Mixpanel&mdash;but please don't hesitate to send
-      love letters!</p>
-
-      <a class="email button-arrow button-hl" href="mailto:xo@madebycabin.com">xo@madebycabin.com</a>
+      technology, design, and heart. As of 2015, we are no longer taking on new
+      projects.</p>
     </section>
 
     <section class="partners selected">
@@ -38,7 +33,7 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Bek Stone (<i>née</i> Hodgson) is a creative director, designer, and strategist whose
+        <p>Bek Stone is a creative director, designer, and strategist whose
         passion for people and socially-valuable pursuits has permeated her
         career for more than a decade. Prior to founding Cabin, Bek led product
         design at GOOD, Etsy, Blurb, and beyond. With a keen mind for
@@ -60,12 +55,12 @@
           <span class="toggle"></span>
         </hgroup>
 
-        <p>Zak Johnson has architected and built software since the late 90s.
-        His passion for crafting experiences that are fun, easy to use, and
-        reliable has defined his work. Zak's intimate familiarity with the
-        entire web stack&mdash;from infrastructure through the database, back
-        end, and front end&mdash;enables him to build full-scale web
-        applications.</p>
+        <p><a href="https://zakj.net/">Zak Johnson</a> has architected and
+        built software since the late 90s. His passion for crafting experiences
+        that are fun, easy to use, and reliable has defined his work. Zak's
+        intimate familiarity with the entire web stack&mdash;from
+        infrastructure through the database, back end, and front
+        end&mdash;enables him to build full-scale web applications.</p>
 
         <div class="social">
           <a href="https://twitter.com/zakj" class="twitter" target="_blank">@zakj</a>
