--- a/cabin/templates/admin/project.html
+++ b/cabin/templates/admin/project.html
@@ -14,6 +14,8 @@
 {% endmacro %}
 
 {% block content %}
+  {{ form.errors }}
+
   <form method="POST" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
 
