--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -35,11 +35,9 @@
 
         <p>Bek Stone is a creative director, designer, and strategist whose
         passion for people and socially-valuable pursuits has permeated her
-        career for more than a decade. Prior to founding Cabin, Bek led product
-        design at GOOD, Etsy, Blurb, and beyond. With a keen mind for
-        transforming complexity into delight and the vision, heart, and
-        business acumen to drive decisions, Bek has won the respect of clients
-        and collaborators alike.</p>
+        career for more than a decade. With a keen mind for transforming
+        complexity into delight, and the business acumen to drive decisions,
+        Bek has won the respect of clients and collaborators alike.</p>
 
         <div class="social">
           <a href="https://twitter.com/saintbek" class="twitter" target="_blank">@saintbek</a>
